<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wificast</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="receiver">Receiver</string>
    <string name="sender">Sender</string>
    <string name="next">Next</string>
    <string name="enter_name">Enter device Name</string>
    <string name="title_activity_sender">Sender</string>
    <string name="title_activity_receiver">Receiver</string>
    <string name="fileName">File Name</string>
    <string name="file_size">File Size</string>
    <string name="title_activity_file_chooser">FileChooser</string>
    <string name="title_activity_sender_connection">SenderConnection</string>
    <string name="title_activity_file_selector">FileSelectionActivity</string>
    
    <string name="ok">OK</string>
    <string name="files">Files</string>
    <string name="directories">Folders</string>
    <string name="goUp">Go Up</string>
    <string name="all">Check All</string>
    <string name="cancel">Cancel</string>
    <string name="none">Uncheck All</string>
    <string name="ext">External</string>
    <string name="Int">Internal</string>
    <string name="New">New Folder</string>
    <string name="CNew">Enter New Folder Name</string>
    <string name="create">Create</string>

</resources>
